--- a/src/admin/css/main.css
+++ b/src/admin/css/main.css
@@ -73,16 +73,14 @@ main .control-bar .song-list {
 main .control-bar .song-list>li {
     height: 16.667%;
     border-bottom: 1.2px solid rgb(239, 238, 241);
-}
-
-main .control-bar .song-list>li>button {
-    width: 100%;
-    height: 100%;
+    cursor: pointer;
     color: rgb(39, 45, 71);
-    padding-left: 80px;
+    padding-left: 20%;
     font-size: 13px;
     font-weight: 900;
-    text-align: start;
+    display: flex;
+    justify-content: start;
+    align-items: center;
     transition: all 0.2s;
 }
 
@@ -90,8 +88,8 @@ main .control-bar .song-list>li:last-child {
     border-bottom: none;
 }
 
-main .control-bar .song-list>li>button:hover,
-main .control-bar .song-list>li>button.active {
+main .control-bar .song-list>li:hover,
+main .control-bar .song-list>li.active {
     background: #ffffff;
 }
 
