--- a/src/admin/css/main.css
+++ b/src/admin/css/main.css
@@ -28,6 +28,49 @@ body {
     height: 100vh;
 }
 
+.loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 10;
+    background: rgba(0, 0, 0, 0.4);
+}
+
+.loading::before,
+.loading::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 0;
+    height: 0;
+    background: #000000;
+    border-radius: 100%;
+    animation: loading 1.2s linear infinite;
+}
+
+.loading::after {
+    animation-delay: 0.6s;
+}
+
+@keyframes loading {
+    from {
+        width: 0;
+        height: 0;
+        opacity: 1;
+    }
+    to {
+        width: 100px;
+        height: 100px;
+        opacity: 0;
+    }
+}
+
 header {
     height: 10%;
     display: block;
