--- a/src/index/css/main.css
+++ b/src/index/css/main.css
@@ -1,4 +1,172 @@
+html {
+    font-size: 100px;
+}
+
+body {
+    font: 0.14rem/1.5 Helvetica, sans-serif;
+    color: #333333;
+    background: #fcfcfd;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+h2,
+p,
+a {
+    margin: 0;
+}
+
+a {
+    color: #333333;
+}
+
+a:active,
+a:visited {
+    color: #333333;
+    text-decoration: none;
+}
+
+.scetion-title {
+    font-weight: normal;
+    font-size: 0.17rem;
+    padding-left: 0.09rem;
+    position: relative;
+}
+
+.scetion-title::after {
+    content: '';
+    width: 0.02rem;
+    height: 0.16rem;
+    background: #d33a31;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+}
+
 header {
-    background: rgb(212, 60, 51);
+    height: 1.04rem;
+}
+
+header .header-top {
     color: rgb(255, 255, 255);
+    background: #d43c33;
+    height: 0.64rem;
+    padding: 0 0.1rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 10;
+}
+
+header .header-top .logo {
+    width: 1.42rem;
+    height: 0.25rem;
+}
+
+header .header-top .download {
+    height: 0.3rem;
+    font-size: 0.15rem;
+    padding: 0 0.1rem;
+    line-height: 0.28rem;
+    color: #ffffff;
+    border: 1px solid rgba(255, 255, 255, 0.6);
+    border-radius: 0.15rem;
+    display: block;
+}
+
+header>nav {
+    background: #ffffff;
+    box-shadow: 0 3px 4px -4px #cccccc;
+    position: fixed;
+    top: 0.64rem;
+    left: 0;
+    right: 0;
+    z-index: 10;
+}
+
+header>nav>ul {
+    display: flex;
+}
+
+header>nav>ul>li {
+    flex: 0 0 33.333%;
+    text-align: center;
+    height: 0.4rem;
+    line-height: 0.4rem;
+    font-size: 0.15rem;
+}
+
+header>nav>ul>li.active {
+    color: #d33a31;
+    position: relative;
+}
+
+header>nav>ul>li.active::after {
+    content: '';
+    width: 100%;
+    background: #d33a31;
+    height: 0.04rem;
+    position: absolute;
+    bottom: -0.01rem;
+    left: 0;
+    transform: scale(0.56, 0.5);
+}
+
+.remd-lists {
+    margin-top: 0.2rem;
+}
+
+.remd-lists>ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.remd-lists>ul>li>a {
+    margin-top: 0.14rem;
+    width: 1.23rem;
+    display: block;
+    position: relative;
+}
+
+.remd-lists>ul>li>a>span {
+    color: #ffffff;
+    position: absolute;
+    top: 0.02rem;
+    right: 0.05rem;
+    font-size: 0.12rem;
+    z-index: 1;
+}
+
+.remd-lists>ul>li>a>img {
+    width: 1.23rem;
+}
+
+.remd-lists>ul>li>a>img::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.08);
+}
+
+.remd-lists>ul>li>a>p {
+    padding: 6px 2px 0 6px;
+    font-size: 0.13rem;
+    line-height: 1.2;
+}
+
+.new-songs {
+    margin-top: 0.2rem;
 }
