--- a/src/index/css/main.css
+++ b/src/index/css/main.css
@@ -25,8 +25,10 @@ a {
     color: #333333;
 }
 
+a:hover,
 a:active,
-a:visited {
+a:visited,
+a:focus {
     color: #333333;
     text-decoration: none;
 }
