--- a/src/playlist/css/main.css
+++ b/src/playlist/css/main.css
@@ -13,6 +13,7 @@ ul {
     margin: 0;
 }
 
+h1,
 h2,
 h4,
 p,
@@ -100,10 +101,12 @@ header {
     color: #fefefe;
     font-size: .17rem;
     font-weight: normal;
-    line-height: .44rem;
+    line-height: 1.3;
     height: .44rem;
     word-wrap: break-word;
     word-break: break-all;
+    display: flex;
+    align-items: center;
 }
 
 .header-top .list-info>p {
