--- a/src/playlist/css/main.css
+++ b/src/playlist/css/main.css
@@ -40,12 +40,15 @@ a:focus {
 
 header {
     position: relative;
+    width: 100vw;
+    overflow: hidden;
 }
 
 .header-bg {
     position: absolute;
     top: -32%;
     left: 0;
+    right: 0;
     filter: blur(20px);
     transform: scale(1.5);
     z-index: -10;
