search-songs style done

--- a/src/index/css/main.css
+++ b/src/index/css/main.css
@@ -33,6 +33,13 @@ a:focus {
     text-decoration: none;
 }
 
+.icon {
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+ }
+
 .hidden {
     display: none;
 }
