--- a/src/admin/css/main.css
+++ b/src/admin/css/main.css
@@ -73,7 +73,14 @@ body {
 
 header {
     height: 10%;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header>h1 {
+    margin: 0;
+    font-size: 26px;
 }
 
 main {
@@ -94,7 +101,7 @@ main .control-bar .add-song {
     box-shadow: 0 5px 4px -4px rgb(239, 238, 241);
     text-align: start;
     padding-left: 40px;
-    font-weight: 900;
+    font-weight: 600;
     letter-spacing: 4px;
 }
 
@@ -120,7 +127,7 @@ main .control-bar .song-list>li {
     color: rgb(39, 45, 71);
     padding-left: 20%;
     font-size: 13px;
-    font-weight: 900;
+    font-weight: 600;
     display: flex;
     justify-content: start;
     align-items: center;
